# lamco-rdp

./: .gitignore  CHANGELOG.md  Cargo.toml  PUBLICATION-STATUS-2025-12-23.md  README.md
crates/lamco-clipboard-core/: CHANGELOG.md  Cargo.toml  README.md
crates/lamco-clipboard-core/src/: formats.rs  image.rs  lib.rs  loop_detector.rs  sanitize.rs  transfer.rs
crates/lamco-rdp-clipboard/: CHANGELOG.md  Cargo.toml
crates/lamco-rdp-clipboard/src/: backend.rs  lib.rs
crates/lamco-rdp-input/: CHANGELOG.md  Cargo.toml  README.md
crates/lamco-rdp-input/src/: coordinates.rs  error.rs  keyboard.rs  lib.rs  mapper.rs  mouse.rs  translator.rs
docs/: clipboard-architecture.md
src/: lib.rs
