[workspace]
resolver = "2"
members = [
    "crates/lamco-rdp-input",
    "crates/lamco-clipboard-core",
    "crates/lamco-rdp-clipboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lamco-admin/lamco-rdp"
homepage = "https://lamco.ai"
authors = ["Lamco <contact@lamco.ai>"]

[workspace.dependencies]
# Internal crates
lamco-rdp-input = { version = "0.1", path = "crates/lamco-rdp-input" }
lamco-clipboard-core = { version = "0.2", path = "crates/lamco-clipboard-core" }
lamco-rdp-clipboard = { version = "0.2", path = "crates/lamco-rdp-clipboard" }

# Core dependencies
thiserror = "2"
tracing = "0.1"

# Async
tokio = { version = "1", default-features = false }

# Serialization
bytes = "1"

# Cryptography
sha2 = "0.10"

# Image processing
image = { version = "0.25", default-features = false }

# Encoding
percent-encoding = "2"

# IronRDP (using git master for latest fixes)
# Publishing note: git spec is removed when publishing, uses crates.io version
ironrdp-cliprdr = { version = "0.4", git = "https://github.com/Devolutions/IronRDP", branch = "master" }
ironrdp-core = { version = "0.1.5", git = "https://github.com/Devolutions/IronRDP", branch = "master" }

# =============================================================================
# Meta-crate configuration (lamco-rdp)
# =============================================================================

[package]
name = "lamco-rdp"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "RDP protocol implementations and IronRDP extensions for Rust"
keywords = ["rdp", "remote-desktop", "input", "clipboard", "ironrdp"]
categories = ["network-programming", "encoding", "os"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["input", "clipboard-core"]
full = ["input", "clipboard-core", "clipboard-rdp"]

# Individual crate features
input = ["dep:lamco-rdp-input"]
clipboard-core = ["dep:lamco-clipboard-core"]
clipboard-rdp = ["clipboard-core", "dep:lamco-rdp-clipboard"]

[dependencies]
lamco-rdp-input = { workspace = true, optional = true }
lamco-clipboard-core = { workspace = true, optional = true }
lamco-rdp-clipboard = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# =============================================================================
# Workspace Lints (inherited by all crates via `[lints] workspace = true`)
# Based on IronRDP's comprehensive lint configuration
# =============================================================================

[workspace.lints.rust]
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
invalid_reference_casting = "warn"
unused_unsafe = "warn"
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Unsafe code
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
missing_safety_doc = "warn"

# Style and readability
wildcard_imports = "warn"

# Performance
large_futures = "warn"
rc_buffer = "warn"

# Relaxed lints - numeric conversions are common in coordinate/graphics code
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
as_conversions = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"

# Test code often uses unwrap/panic
unwrap_used = "allow"
panic = "allow"

[lints]
workspace = true
