[package]
name = "lamco-rdp-clipboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "IronRDP clipboard integration - CliprdrBackend implementation for RDP clipboard sync"
keywords = ["rdp", "clipboard", "ironrdp", "cliprdr"]
categories = ["network-programming", "encoding"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lamco-clipboard-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
